# namecheap-ddns

./:  .release.toml  .gitignore  Cargo.toml  Dockerfile  README.md
src/: main.rs
